error_permutacion.txt
Tarea_2/EsPermutacion.java:42: error: Incorrectly formed or terminated loop_invariant statement near here
          @ maintaining r == \num_of int j; 0 <= j && j < S.length; S[j] == E);
                                                                             ^
1 error
